--- a/header.html
+++ b/header.html
@@ -25,8 +25,8 @@
                         <button class="button">Discover our products</button>
                     </div>
                 </ul>
-                <a class="toggler-navbar" onclick="toogleClass()">
-                    <div class="hamburger-menu">
+                <a class="toggler-navbar" onclick="toogleClass()" >
+                    <div class="hamburger-menu not-active" >
                         <span></span>
                         <span></span>
                         <span></span>
